tests/error/mod_by_zero.clac
// TEST: expect_error
1 0 % print quit
